// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`as-histogram-widget Rendering should not render header when showHeader is false 1`] = `
<as-histogram-widget
  class="hydrated"
>
  
  
  <div
    class="as-histogram-widget__wrapper"
  >
    <span
      class="as-histogram-widget__tooltip"
      role="tooltip"
    >
      
    </span>
    <svg>
      <g
        class="yAxis"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="end"
        transform="translate(30, 5)"
      />
      <g
        class="xAxis"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="middle"
        transform="translate(30, 130)"
      >
        <g
          class="tick"
          opacity="1"
          transform="translate(0.5,0)"
        >
          <text
            dy="0.71em"
            fill="#000"
            y="50"
          >
            0
          </text>
        </g>
      </g>
      <g
        transform="translate(30, 5)"
      />
      <g
        class="brush"
        fill="none"
        pointer-events="all"
      >
        <rect
          class="overlay"
          cursor="crosshair"
          height="125"
          pointer-events="all"
          width="-20"
          x="30"
          y="5"
        />
        <rect
          class="selection"
          cursor="move"
          fill="#777"
          fill-opacity="0.3"
          shape-rendering="crispEdges"
          stroke="#fff"
          style="display: none;"
        />
        <rect
          class="handle handle--e"
          cursor="ew-resize"
          style="display: none;"
        />
        <rect
          class="handle handle--w"
          cursor="ew-resize"
          style="display: none;"
        />
        <rect
          class="handle--custom"
          cursor="ew-resize"
          fill="var(--as-color-complementary, #47DB99)"
          height="15"
          rx="100"
          ry="100"
          style="opacity: 0;"
          width="15"
        />
        <rect
          class="handle--custom"
          cursor="ew-resize"
          fill="var(--as-color-complementary, #47DB99)"
          height="15"
          rx="100"
          ry="100"
          style="opacity: 0;"
          width="15"
        />
        <line
          class="bottomline"
          pointer-events="none"
          stroke="var(--as-color-complementary, #47DB99)"
          stroke-width="4"
          style="opacity: 0;"
          y1="130"
          y2="130"
        />
      </g>
    </svg>
  </div>
  
</as-histogram-widget>
`;

exports[`as-histogram-widget Rendering should render clear button 1`] = `
<as-histogram-widget
  class="hydrated"
>
  
  <h2
    class="as-histogram-widget__header"
  >
    
  </h2>
  <p
    class="as-histogram-widget__description as-body"
  >
    
  </p>
  <div
    class="as-histogram-widget__wrapper"
  >
    <span
      class="as-histogram-widget__tooltip"
      role="tooltip"
    >
      
    </span>
    <svg>
      <g
        class="yAxis"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="end"
        transform="translate(30, 5)"
      >
        <g
          class="tick"
          opacity="1"
          transform="translate(0,125.5)"
        >
          <line
            stroke="#000"
            x2="-40"
          />
          <text
            dy="0.32em"
            fill="#000"
            x="-50"
          >
            0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,94.25)"
        >
          <line
            stroke="#000"
            x2="-40"
          />
          <text
            dy="0.32em"
            fill="#000"
            x="-50"
          >
            5
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,63)"
        >
          <line
            stroke="#000"
            x2="-40"
          />
          <text
            dy="0.32em"
            fill="#000"
            x="-50"
          >
            10
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,31.75)"
        >
          <line
            stroke="#000"
            x2="-40"
          />
          <text
            dy="0.32em"
            fill="#000"
            x="-50"
          >
            15
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,0.5)"
        >
          <line
            stroke="#000"
            x2="-40"
          />
          <text
            dy="0.32em"
            fill="#000"
            x="-50"
          >
            20
          </text>
        </g>
      </g>
      <g
        class="xAxis"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="middle"
        transform="translate(30, 130)"
      >
        <g
          class="tick"
          opacity="1"
          transform="translate(0.5,0)"
        >
          <text
            dy="0.71em"
            fill="#000"
            y="50"
          >
            0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(-9.5,0)"
        >
          <text
            dy="0.71em"
            fill="#000"
            y="50"
          >
            10
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(-19.5,0)"
        >
          <text
            dy="0.71em"
            fill="#000"
            y="50"
          >
            20
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(-29.5,0)"
        >
          <text
            dy="0.71em"
            fill="#000"
            y="50"
          >
            30
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(-39.5,0)"
        >
          <text
            dy="0.71em"
            fill="#000"
            y="50"
          >
            40
          </text>
        </g>
      </g>
      <g
        transform="translate(30, 5)"
      >
        <rect
          class="bar"
          height="0"
          style="fill: var(--as-color-primary, #1785FB);"
          width="0"
          x="0"
          y="125"
        />
        <rect
          class="bar"
          height="0"
          style="fill: var(--as-color-primary, #1785FB);"
          width="0"
          x="-10"
          y="125"
        />
        <rect
          class="bar"
          height="0"
          style="fill: var(--as-color-primary, #1785FB);"
          width="0"
          x="-20"
          y="125"
        />
        <rect
          class="bar"
          height="0"
          style="fill: var(--as-color-primary, #1785FB);"
          width="0"
          x="-30"
          y="125"
        />
      </g>
      <g
        class="brush"
        fill="none"
        pointer-events="all"
      >
        <rect
          class="overlay"
          cursor="crosshair"
          height="125"
          pointer-events="all"
          width="-20"
          x="30"
          y="5"
        />
        <rect
          class="selection"
          cursor="move"
          fill="#777"
          fill-opacity="0.3"
          shape-rendering="crispEdges"
          stroke="#fff"
          style="display: none;"
        />
        <rect
          class="handle handle--e"
          cursor="ew-resize"
          style="display: none;"
        />
        <rect
          class="handle handle--w"
          cursor="ew-resize"
          style="display: none;"
        />
        <rect
          class="handle--custom"
          cursor="ew-resize"
          fill="var(--as-color-complementary, #47DB99)"
          height="15"
          rx="100"
          ry="100"
          style="opacity: 0;"
          width="15"
        />
        <rect
          class="handle--custom"
          cursor="ew-resize"
          fill="var(--as-color-complementary, #47DB99)"
          height="15"
          rx="100"
          ry="100"
          style="opacity: 0;"
          width="15"
        />
        <line
          class="bottomline"
          pointer-events="none"
          stroke="var(--as-color-complementary, #47DB99)"
          stroke-width="4"
          style="opacity: 0;"
          y1="130"
          y2="130"
        />
      </g>
    </svg>
  </div>
  <button
    class="as-btn as-btn--primary as-btn--s as-histogram-widget__clear"
  >
    Clear selection
  </button>
</as-histogram-widget>
`;

exports[`as-histogram-widget Rendering should render colors properly 1`] = `
<as-histogram-widget
  class="hydrated"
>
  
  <h2
    class="as-histogram-widget__header"
  >
    
  </h2>
  <p
    class="as-histogram-widget__description as-body"
  >
    
  </p>
  <div
    class="as-histogram-widget__wrapper"
  >
    <span
      class="as-histogram-widget__tooltip"
      role="tooltip"
    >
      
    </span>
    <svg>
      <g
        class="yAxis"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="end"
        transform="translate(30, 5)"
      >
        <g
          class="tick"
          opacity="1"
          transform="translate(0,125.5)"
        >
          <line
            stroke="#000"
            x2="-40"
          />
          <text
            dy="0.32em"
            fill="#000"
            x="-50"
          >
            0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,94.25)"
        >
          <line
            stroke="#000"
            x2="-40"
          />
          <text
            dy="0.32em"
            fill="#000"
            x="-50"
          >
            5
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,63)"
        >
          <line
            stroke="#000"
            x2="-40"
          />
          <text
            dy="0.32em"
            fill="#000"
            x="-50"
          >
            10
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,31.75)"
        >
          <line
            stroke="#000"
            x2="-40"
          />
          <text
            dy="0.32em"
            fill="#000"
            x="-50"
          >
            15
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,0.5)"
        >
          <line
            stroke="#000"
            x2="-40"
          />
          <text
            dy="0.32em"
            fill="#000"
            x="-50"
          >
            20
          </text>
        </g>
      </g>
      <g
        class="xAxis"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="middle"
        transform="translate(30, 130)"
      >
        <g
          class="tick"
          opacity="1"
          transform="translate(0.5,0)"
        >
          <text
            dy="0.71em"
            fill="#000"
            y="50"
          >
            0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(-9.5,0)"
        >
          <text
            dy="0.71em"
            fill="#000"
            y="50"
          >
            10
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(-19.5,0)"
        >
          <text
            dy="0.71em"
            fill="#000"
            y="50"
          >
            20
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(-29.5,0)"
        >
          <text
            dy="0.71em"
            fill="#000"
            y="50"
          >
            30
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(-39.5,0)"
        >
          <text
            dy="0.71em"
            fill="#000"
            y="50"
          >
            40
          </text>
        </g>
      </g>
      <g
        transform="translate(30, 5)"
      >
        <rect
          class="bar"
          height="0"
          style="fill: #EEFFFF;"
          width="0"
          x="0"
          y="125"
        />
        <rect
          class="bar"
          height="0"
          style="fill: #EEFFFF;"
          width="0"
          x="-10"
          y="125"
        />
        <rect
          class="bar"
          height="0"
          style="fill: #FFAAAA;"
          width="0"
          x="-20"
          y="125"
        />
        <rect
          class="bar"
          height="0"
          style="fill: #FFAAAA;"
          width="0"
          x="-30"
          y="125"
        />
      </g>
      <g
        class="brush"
        fill="none"
        pointer-events="all"
      >
        <rect
          class="overlay"
          cursor="crosshair"
          height="125"
          pointer-events="all"
          width="-20"
          x="30"
          y="5"
        />
        <rect
          class="selection"
          cursor="move"
          fill="#777"
          fill-opacity="0.3"
          height="125"
          shape-rendering="crispEdges"
          stroke="#fff"
          style=""
          width="-20"
          x="30"
          y="5"
        />
        <rect
          class="handle handle--e"
          cursor="ew-resize"
          height="130"
          style=""
          width="5"
          x="7.5"
          y="2.5"
        />
        <rect
          class="handle handle--w"
          cursor="ew-resize"
          height="130"
          style=""
          width="5"
          x="27.5"
          y="2.5"
        />
        <rect
          class="handle--custom"
          cursor="ew-resize"
          fill="var(--as-color-complementary, #47DB99)"
          height="15"
          rx="100"
          ry="100"
          style="opacity: 1;"
          transform="translate(22.5,122.5)"
          width="15"
        />
        <rect
          class="handle--custom"
          cursor="ew-resize"
          fill="var(--as-color-complementary, #47DB99)"
          height="15"
          rx="100"
          ry="100"
          style="opacity: 1;"
          transform="translate(2.5,122.5)"
          width="15"
        />
        <line
          class="bottomline"
          pointer-events="none"
          stroke="var(--as-color-complementary, #47DB99)"
          stroke-width="4"
          style="opacity: 1;"
          x1="30"
          x2="10"
          y1="130"
          y2="130"
        />
      </g>
    </svg>
  </div>
  
</as-histogram-widget>
`;

exports[`as-histogram-widget Rendering should render properly 1`] = `
<as-histogram-widget
  class="hydrated"
>
  
  <h2
    class="as-histogram-widget__header"
  >
    Histogram Widget Example
  </h2>
  <p
    class="as-histogram-widget__description as-body"
  >
    Description for Histogram Widget
  </p>
  <div
    class="as-histogram-widget__wrapper"
  >
    <span
      class="as-histogram-widget__tooltip"
      role="tooltip"
    >
      
    </span>
    <svg>
      <g
        class="yAxis"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="end"
        transform="translate(30, 5)"
      >
        <g
          class="tick"
          opacity="1"
          transform="translate(0,125.5)"
        >
          <line
            stroke="#000"
            x2="-40"
          />
          <text
            dy="0.32em"
            fill="#000"
            x="-50"
          >
            0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,94.25)"
        >
          <line
            stroke="#000"
            x2="-40"
          />
          <text
            dy="0.32em"
            fill="#000"
            x="-50"
          >
            5
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,63)"
        >
          <line
            stroke="#000"
            x2="-40"
          />
          <text
            dy="0.32em"
            fill="#000"
            x="-50"
          >
            10
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,31.75)"
        >
          <line
            stroke="#000"
            x2="-40"
          />
          <text
            dy="0.32em"
            fill="#000"
            x="-50"
          >
            15
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,0.5)"
        >
          <line
            stroke="#000"
            x2="-40"
          />
          <text
            dy="0.32em"
            fill="#000"
            x="-50"
          >
            20
          </text>
        </g>
      </g>
      <g
        class="xAxis"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="middle"
        transform="translate(30, 130)"
      >
        <g
          class="tick"
          opacity="1"
          transform="translate(0.5,0)"
        >
          <text
            dy="0.71em"
            fill="#000"
            y="50"
          >
            0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(-9.5,0)"
        >
          <text
            dy="0.71em"
            fill="#000"
            y="50"
          >
            10
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(-19.5,0)"
        >
          <text
            dy="0.71em"
            fill="#000"
            y="50"
          >
            20
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(-29.5,0)"
        >
          <text
            dy="0.71em"
            fill="#000"
            y="50"
          >
            30
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(-39.5,0)"
        >
          <text
            dy="0.71em"
            fill="#000"
            y="50"
          >
            40
          </text>
        </g>
      </g>
      <g
        transform="translate(30, 5)"
      >
        <rect
          class="bar"
          height="0"
          style="fill: var(--as-color-primary, #1785FB);"
          width="0"
          x="0"
          y="125"
        />
        <rect
          class="bar"
          height="0"
          style="fill: var(--as-color-primary, #1785FB);"
          width="0"
          x="-10"
          y="125"
        />
        <rect
          class="bar"
          height="0"
          style="fill: var(--as-color-primary, #1785FB);"
          width="0"
          x="-20"
          y="125"
        />
        <rect
          class="bar"
          height="0"
          style="fill: var(--as-color-primary, #1785FB);"
          width="0"
          x="-30"
          y="125"
        />
      </g>
      <g
        class="brush"
        fill="none"
        pointer-events="all"
      >
        <rect
          class="overlay"
          cursor="crosshair"
          height="125"
          pointer-events="all"
          width="-20"
          x="30"
          y="5"
        />
        <rect
          class="selection"
          cursor="move"
          fill="#777"
          fill-opacity="0.3"
          shape-rendering="crispEdges"
          stroke="#fff"
          style="display: none;"
        />
        <rect
          class="handle handle--e"
          cursor="ew-resize"
          style="display: none;"
        />
        <rect
          class="handle handle--w"
          cursor="ew-resize"
          style="display: none;"
        />
        <rect
          class="handle--custom"
          cursor="ew-resize"
          fill="var(--as-color-complementary, #47DB99)"
          height="15"
          rx="100"
          ry="100"
          style="opacity: 0;"
          width="15"
        />
        <rect
          class="handle--custom"
          cursor="ew-resize"
          fill="var(--as-color-complementary, #47DB99)"
          height="15"
          rx="100"
          ry="100"
          style="opacity: 0;"
          width="15"
        />
        <line
          class="bottomline"
          pointer-events="none"
          stroke="var(--as-color-complementary, #47DB99)"
          stroke-width="4"
          style="opacity: 0;"
          y1="130"
          y2="130"
        />
      </g>
    </svg>
  </div>
  <button
    class="as-btn as-btn--primary as-btn--s as-histogram-widget__clear"
  >
    Clear selection
  </button>
</as-histogram-widget>
`;

exports[`as-histogram-widget Rendering should render selection properly 1`] = `
<as-histogram-widget
  class="hydrated"
>
  
  <h2
    class="as-histogram-widget__header"
  >
    
  </h2>
  <p
    class="as-histogram-widget__description as-body"
  >
    
  </p>
  <div
    class="as-histogram-widget__wrapper"
  >
    <span
      class="as-histogram-widget__tooltip"
      role="tooltip"
    >
      
    </span>
    <svg>
      <g
        class="yAxis"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="end"
        transform="translate(30, 5)"
      >
        <g
          class="tick"
          opacity="1"
          transform="translate(0,125.5)"
        >
          <line
            stroke="#000"
            x2="-40"
          />
          <text
            dy="0.32em"
            fill="#000"
            x="-50"
          >
            0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,94.25)"
        >
          <line
            stroke="#000"
            x2="-40"
          />
          <text
            dy="0.32em"
            fill="#000"
            x="-50"
          >
            5
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,63)"
        >
          <line
            stroke="#000"
            x2="-40"
          />
          <text
            dy="0.32em"
            fill="#000"
            x="-50"
          >
            10
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,31.75)"
        >
          <line
            stroke="#000"
            x2="-40"
          />
          <text
            dy="0.32em"
            fill="#000"
            x="-50"
          >
            15
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,0.5)"
        >
          <line
            stroke="#000"
            x2="-40"
          />
          <text
            dy="0.32em"
            fill="#000"
            x="-50"
          >
            20
          </text>
        </g>
      </g>
      <g
        class="xAxis"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="middle"
        transform="translate(30, 130)"
      >
        <g
          class="tick"
          opacity="1"
          transform="translate(0.5,0)"
        >
          <text
            dy="0.71em"
            fill="#000"
            y="50"
          >
            0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(-9.5,0)"
        >
          <text
            dy="0.71em"
            fill="#000"
            y="50"
          >
            10
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(-19.5,0)"
        >
          <text
            dy="0.71em"
            fill="#000"
            y="50"
          >
            20
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(-29.5,0)"
        >
          <text
            dy="0.71em"
            fill="#000"
            y="50"
          >
            30
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(-39.5,0)"
        >
          <text
            dy="0.71em"
            fill="#000"
            y="50"
          >
            40
          </text>
        </g>
      </g>
      <g
        transform="translate(30, 5)"
      >
        <rect
          class="bar"
          height="0"
          style="fill: var(--as-color-complementary, #47DB99);"
          width="0"
          x="0"
          y="125"
        />
        <rect
          class="bar"
          height="0"
          style="fill: var(--as-color-complementary, #47DB99);"
          width="0"
          x="-10"
          y="125"
        />
        <rect
          class="bar"
          height="0"
          style="fill: var(--as-color-primary, #1785FB);"
          width="0"
          x="-20"
          y="125"
        />
        <rect
          class="bar"
          height="0"
          style="fill: var(--as-color-primary, #1785FB);"
          width="0"
          x="-30"
          y="125"
        />
      </g>
      <g
        class="brush"
        fill="none"
        pointer-events="all"
      >
        <rect
          class="overlay"
          cursor="crosshair"
          height="125"
          pointer-events="all"
          width="-20"
          x="30"
          y="5"
        />
        <rect
          class="selection"
          cursor="move"
          fill="#777"
          fill-opacity="0.3"
          height="125"
          shape-rendering="crispEdges"
          stroke="#fff"
          style=""
          width="-20"
          x="30"
          y="5"
        />
        <rect
          class="handle handle--e"
          cursor="ew-resize"
          height="130"
          style=""
          width="5"
          x="7.5"
          y="2.5"
        />
        <rect
          class="handle handle--w"
          cursor="ew-resize"
          height="130"
          style=""
          width="5"
          x="27.5"
          y="2.5"
        />
        <rect
          class="handle--custom"
          cursor="ew-resize"
          fill="var(--as-color-complementary, #47DB99)"
          height="15"
          rx="100"
          ry="100"
          style="opacity: 1;"
          transform="translate(22.5,122.5)"
          width="15"
        />
        <rect
          class="handle--custom"
          cursor="ew-resize"
          fill="var(--as-color-complementary, #47DB99)"
          height="15"
          rx="100"
          ry="100"
          style="opacity: 1;"
          transform="translate(2.5,122.5)"
          width="15"
        />
        <line
          class="bottomline"
          pointer-events="none"
          stroke="var(--as-color-complementary, #47DB99)"
          stroke-width="4"
          style="opacity: 1;"
          x1="30"
          x2="10"
          y1="130"
          y2="130"
        />
      </g>
    </svg>
  </div>
  
</as-histogram-widget>
`;
